@@ -1,6 +1,9 @@
 package org.checkerframework.example;
 
+import java.util.HashMap;
+import java.util.Map;
 import org.apache.commons.lang3.text.StrBuilder;
+import org.checkerframework.checker.nullness.qual.KeyFor;
 import org.checkerframework.checker.nullness.qual.NonNull;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
@@ -16,6 +19,7 @@ import org.checkerframework.checker.nullness.qual.Nullable;
 public class MavenExample {
 
     public static @Nullable Object nullable = null;
+    public Map<Object, Object> map = new HashMap<>();
 
     public static void main(final String[] args) {
         System.out.println("Hello World!");
@@ -25,4 +29,7 @@ public class MavenExample {
         @NonNull Object nn = nullable; // error on this line
         System.out.println(nn);
     }
+
+    // Test for -J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED.
+    void mapTest(@KeyFor("map") Object k) {}
 }
